# mariadb-documentation

./: .gitignore  Cargo.toml  README.md  config.toml  index.html  kb_urls.csv  main.py
+changes/: index  index.html
.github/workflows/: check_urls.yml
archive/: last_updated.txt
archive/+changes/: index.html
archive/de/: index.html
archive/en/: index.html
archive/es/: index.html
archive/fr/: index.html
archive/it/: index.html
archive/ja/: index.html
archive/ko/: index.html
archive/languages/: index.html
archive/pt-br/: index.html
crawler/: Cargo.toml
crawler/src/: app_args.rs  last_updated.rs  logger.rs  main.rs  method.rs  redirect.rs  scrape.rs  standard_crawler.rs  starting_urls.rs
de/: index  index.html
en/: index.html
es/: index  index.html
fr/: index  index.html
help_contents/: README.md  main.py  mariadb_versions.csv
it/: index  index.html
ja/: index  index.html
ko/: index  index.html
mariadb_pdf/: .gitignore  main.py  preface.html  requirements.txt
pdf/: generate_pdf.py
pt/: index  index.html
pt-br/: index  index.html
ru/: index  index.html
search/: index.html
server/: Cargo.toml  README.md  kb_urls.csv
server/src/: kb_urls.rs  lib.rs  main.rs
setup/: config.py  kb_urls.py  languages.py  logger.py  paths.py
src/: app_args.rs  crawler.rs  css_links.txt  debug.py  format_to_text.py  generate_help_table.py  graceful_shutdown.rs  kb_urls.rs  last_updated.rs  lib.rs  logger.rs  main.rs  method.rs  recent_crawler.rs  redirect.rs  req.rs  scrape.rs  standard_crawler.rs  starting_urls.rs  tag_rules.py  url_to_path.rs  version.py
tests/: test_format.py  test_generate.py  test_paths.py  test_tag_rules.py  test_version.py
vi/: index  index.html
zh-cn/: index  index.html
zh-tw/: index  index.html
(+133988 files in other folders)
