[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full", "rt"] }
mariadb_url = { path = "../mariadb_url" }
axum = { version = "0.6.10", features = ["macros", "headers"] }
tokio-util = { version = "0.7.7", features = ["io"] }
