[package]
name = "mariadb_archive_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip=true

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full", "rt"] }
axum = { version = "0.6.10", features = ["macros", "headers"] }
csv = "1.2.1"
