[package]
name = "mariadb_kb_crawler"
version = "0.1.0"
edition = "2021"

# Improve Compilation time
[profile.release]
strip = true
lto = false

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "rustls-tls"] }
simplelog = "0.12.0"
lazy-regex = "2.3.1"
clap = { version = "4.0.29"}
chrono = "0.4.23"
csv = "1.1.6"
serde = { version = "1.0.152", features = ["derive"] }
