[package]
name = "mariadb_kb_server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full", "rt"] }
axum = { version = "0.6.10", features = ["macros", "headers"] }
csv = "1.2.1"
clap = "4.2.0"
